Fixed Team view text-overflow and replaced multiselect dropdown component.

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -268,6 +268,11 @@ input[type=button]:focus {
   width: 83.1%;
  }
 
+// This prevents the text overflow in all tables
+ td {
+  overflow-wrap: break-word !important;
+ }
+
 .warning-icon {
   font-size: 16px;
   color: #dc3545;
